fixed logo wrapping

--- a/styles/large.css
+++ b/styles/large.css
@@ -17,9 +17,7 @@
       
       .mobile-header {
         display: flex;
-        justify-content: space-around;
-        margin: auto;
-        width: 50%;
+        justify-content: center;
         font-size: 26px;
       }
 
